fixed bug causing void return types to havd world arguments